# RBE-2002-Bot

./: .gitignore  ESP-ANDY.psk  compile_commands.json  platformio.ini
.cache/clangd/index/: FastGPIO.h.56601315D6FC8EA0.idx  IRdecoder.cpp.1713738911168493.idx  IRdecoder.h.97866E76FEA087A6.idx  LSM6.cpp.872D392133F46FF5.idx  LSM6.h.5AE50B73A29F9932.idx  LineSensor.cpp.CAE150CCD1AF1875.idx  LineSensor.h.7448E077F82AD5F4.idx  PCint.cpp.3D49D5F1DE9AA8E5.idx  PCint.h.6C58C63D082B2078.idx  Pushbutton.cpp.34E310334E2051A6.idx  Pushbutton.h.FB6B08DFE082183A.idx  Romi32U4MotorTemplate.cpp.76DFA166635F6193.idx  Romi32U4MotorTemplate.h.23452E3D9D336B5C.idx  chassis.cpp.543D00EA19DDF53B.idx  chassis.h.DD79B1504A09D327.idx  event_timer.cpp.E74C4AE7A27DD97D.idx  event_timer.h.A8B19C2C4E836293.idx  main.cpp.F8FE7D380D84348E.idx  robot.cpp.F0118B1FABF9F2EA.idx  robot.h.8A6BA30FA3E3968E.idx
ESP/: ESP-ANDY.psk.h  compile_commands.json  platformio.ini
ESP/lib/OpenMV/: apriltagdatum.h  main.py  openmv.cpp  openmv.h
ESP/lib/Protobufs/: Interface.h  message.pb.c  message.pb.h
ESP/src/: ServerInterface.h  main.cpp
Protobufs/: message.pb.h  message.proto
Romi/: compile_commands.json  platformio.ini
Romi/src/: main.cpp  robot-control.cpp  robot-nav.cpp  robot.cpp  robot.h
Server/: Cargo.toml  build.rs
Server/public/: index.html  index.js  style.css
Server/src/: main.rs  map.rs  protos.rs  romi.rs  view.rs
SimRomi/: Cargo.toml
SimRomi/src/: main.rs
src/: chickening.cpp  garbage.cpp  main.cpp  robot-control.cpp  robot-remote.cpp  robot-routines.cpp  robot.cpp  robot.h
(+22 files in other folders)
