[package]
name = "SimRomi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["ws"] }
protobuf = "*"
reqwest = "0.12.9"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dashmap = "6.1.0"
pathfinding = "4.12.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
headers = "0.4.0"
futures-util = "0.3.31"
serde_json = "1.0.133"

[build-dependencies]
protobuf-codegen = "*"
